# cpp-college-projecs

./: README.md
OOP-proj-1/: CMakeLists.txt  Classroom.cpp  Classroom.h  Corridor.cpp  Corridor.h  Floor.cpp  Floor.h  Makefile  SchoolBuilding.cpp  SchoolBuilding.h  Stair.cpp  Stair.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Yard.cpp  Yard.h  gmon.out  main.cpp  utilities.h
OOP-proj-2/: CMakeLists.txt  Class.cpp  Class.h  Corridor.cpp  Corridor.h  Floor.cpp  Floor.h  JuniorClass.h  JuniorStudent.h  Makefile  Person.cpp  Person.h  Room.cpp  Room.h  SchoolBuilding.cpp  SchoolBuilding.h  SeniorClass.h  SeniorStudent.h  Stair.cpp  Stair.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Yard.h  gmon.out  main.cpp  utilities.cpp
OOP-proj-4/: CMakeLists.txt  Date.cpp  Date.h  Forum.cpp  Forum.h  Makefile  Post.cpp  Post.h  PostList.cpp  PostList.h  PrintSorted.cpp  PrintSorted.h  Thread.cpp  Thread.h  ThreadList.cpp  ThreadList.h  Tree.cpp  Tree.h  main.cpp  topics  usernames  words
OOP-proj3/: CargoBay.cpp  CargoBay.h  CleaningEmployee.cpp  CleaningEmployee.h  Employee.cpp  Employee.h  EquipmentCompartment.cpp  EquipmentCompartment.h  MaintenanceEmployee.cpp  MaintenanceEmployee.h  Makefile  Object.cpp  Object.h  PassengerCompartment.cpp  PassengerCompartment.h  Plane.cpp  Plane.h  PlaneComponent.cpp  PlaneComponent.h  PrivateCompartment.cpp  PrivateCompartment.h  SecurityEmployee.cpp  SecurityEmployee.h  String.cpp  String.h  clone_encrypt_and_print.cpp  clone_encrypt_and_print.h  list.cpp  list.h  main.cpp
